netsec/firewall/iptables_lab_1.txt
# Generated by iptables-save v1.8.9 (nf_tables) on Tue Dec 30 08:26:37 2025
*filter
:INPUT ACCEPT [183625:225961777]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [33719:5783954]
:LOG_SSH_DROP - [0:0]
:syn_flood - [0:0]
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -m conntrack --ctstate INVALID -j DROP
-A FORWARD -d 10.0.1.10/32 -p tcp -m multiport --dports 80,443 -j ACCEPT
-A FORWARD -d 10.0.1.11/32 -p tcp -m multiport --dports 80,443 -j ACCEPT
-A FORWARD -d 10.0.1.10/32 -p icmp -j ACCEPT
-A FORWARD -d 10.0.1.11/32 -p icmp -j ACCEPT
-A FORWARD -s 192.168.50.0/24 -d 10.0.1.11/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -s 192.168.50.0/24 -d 10.0.1.10/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -s 10.0.1.10/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A FORWARD -s 10.0.1.11/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A FORWARD -s 10.0.1.10/32 -p tcp -m tcp --dport 53 -j ACCEPT
-A FORWARD -s 10.0.1.10/32 -p udp -m udp --dport 53 -j ACCEPT
-A FORWARD -s 10.0.1.11/32 -p tcp -m tcp --dport 53 -j ACCEPT
-A FORWARD -s 10.0.1.11/32 -p udp -m udp --dport 53 -j ACCEPT
-A FORWARD -d 10.0.1.10/32 -p tcp -m tcp --dport 22 -j LOG_SSH_DROP
-A FORWARD -d 10.0.1.11/32 -p tcp -m tcp --dport 22 -j LOG_SSH_DROP
-A FORWARD -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -j DROP
-A FORWARD -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,PSH,ACK,URG -j DROP
-A FORWARD -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -j syn_flood
-A FORWARD -p icmp -m limit --limit 1/sec --limit-burst 1 -j ACCEPT
-A FORWARD -p icmp -m limit --limit 1/sec --limit-burst 1 -j LOG --log-prefix "PING-DROP:"
-A FORWARD -p icmp -j DROP
-A FORWARD -s 10.0.0.0/8 -j DROP
-A FORWARD -d 10.0.0.0/8 -j DROP
-A FORWARD -s 172.16.0.0/12 -j DROP
-A FORWARD -d 172.16.0.0/12 -j DROP
-A FORWARD -s 192.168.0.0/16 -j DROP
-A FORWARD -d 192.168.0.0/16 -j DROP
-A LOG_SSH_DROP -m limit --limit 5/min -j LOG --log-prefix "SSH-DENY: "
-A LOG_SSH_DROP -j DROP
-A syn_flood -m limit --limit 1/sec --limit-burst 3 -j RETURN
-A syn_flood -j DROP
COMMIT
# Completed on Tue Dec 30 08:26:37 2025
