netsec/firewall/iptables_lab_2.txt
# Generated by iptables-save v1.8.9 (nf_tables) on Tue Dec 30 12:21:33 2025
*filter
:INPUT ACCEPT [1586716:2351467763]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [1041691:851904792]
:LOG_SSH_DROP - [0:0]
:syn_flood - [0:0]
-A FORWARD -m conntrack --ctstate INVALID -j DROP
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD ! -s 10.10.10.0/24 -i eth1 -j DROP
-A FORWARD ! -s 10.10.20.0/24 -i eth2 -j DROP
-A FORWARD ! -s 10.10.30.0/24 -i eth3 -j DROP
-A FORWARD -s 10.10.10.0/24 -j ACCEPT
-A FORWARD -s 10.10.20.0/24 -d 10.10.30.0/24 -m limit --limit 5/min -j LOG --log-prefix "DENY-V20->V30: "
-A FORWARD -s 10.10.20.0/24 -d 10.10.30.0/24 -j DROP
-A FORWARD -s 10.10.30.0/24 -d 10.10.20.0/24 -m limit --limit 5/min -j LOG --log-prefix "DENY-V30->V20: "
-A FORWARD -s 10.10.30.0/24 -d 10.10.10.0/24 -m limit --limit 5/min -j LOG --log-prefix "DENY-V30->V10: "
-A FORWARD -s 10.10.30.0/24 -d 10.10.20.0/24 -j DROP
-A FORWARD -s 10.10.30.0/24 -d 10.10.10.0/24 -j DROP
-A FORWARD -s 10.10.20.0/24 -d 10.10.10.0/24 -p tcp -m tcp --dport 445 -j ACCEPT
-A FORWARD -s 10.10.20.0/24 -d 10.10.10.0/24 -p tcp -m tcp --dport 389 -j ACCEPT
-A FORWARD -s 10.10.20.0/24 -o eth0 -p tcp -m tcp --dport 80 -j ACCEPT
-A FORWARD -s 10.10.20.0/24 -o eth0 -p tcp -m tcp --dport 443 -j ACCEPT
-A FORWARD -s 10.10.30.0/24 -o eth0 -p tcp -m tcp --dport 80 -j ACCEPT
-A FORWARD -s 10.10.30.0/24 -o eth0 -p tcp -m tcp --dport 443 -j ACCEPT
-A FORWARD -s 10.10.30.0/24 -o eth0 -p tcp -m tcp --dport 53 -j ACCEPT
-A FORWARD -s 10.10.30.0/24 -o eth0 -p udp -m udp --dport 53 -j ACCEPT
COMMIT
# Completed on Tue Dec 30 12:21:33 2025
