netsec/firewall/iptables_lab_3.txt
# Generated by iptables-save v1.8.9 (nf_tables) on Wed Dec 31 17:31:42 2025
*filter
:INPUT ACCEPT [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -m conntrack --ctstate INVALID -j DROP
-A FORWARD ! -s 172.16.1.0/24 -i eth1 -j LOG --log-prefix "LOG DMZ Spoof"
-A FORWARD ! -s 172.16.1.0/24 -i eth1 -j DROP
-A FORWARD ! -s 172.16.2.0/24 -i eth2 -j LOG --log-prefix "LOG App-Tier Spoof"
-A FORWARD ! -s 172.16.2.0/24 -i eth2 -j DROP
-A FORWARD ! -s 172.16.3.0/24 -i eth3 -j LOG --log-prefix "LOG CDE Spoof"
-A FORWARD ! -s 172.16.3.0/24 -i eth3 -j DROP
-A FORWARD -d 172.16.3.0/24 -o eth3 -f -j LOG --log-prefix "BAN Fragmented CDE Packets"
-A FORWARD -d 172.16.3.0/24 -o eth3 -f -j DROP
-A FORWARD -d 172.16.1.0/24 -i eth0 -o eth1 -p tcp -m tcp --dport 443 -j ACCEPT
-A FORWARD -s 203.0.113.50/32 -d 172.16.1.0/24 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -s 172.16.1.0/24 -i eth1 -o eth0 -p tcp -m tcp --dport 443 -j ACCEPT
-A FORWARD -s 172.16.1.0/24 -i eth1 -o eth0 -p tcp -m tcp --dport 53 -j ACCEPT
-A FORWARD -s 172.16.1.0/24 -i eth1 -o eth0 -p udp -m udp --dport 53 -j ACCEPT
-A FORWARD -d 172.16.1.0/24 -i eth0 -o eth1 -j LOG --log-prefix "LOG BAN of all other inbound"
-A FORWARD -d 172.16.1.0/24 -i eth0 -o eth1 -j DROP
-A FORWARD -s 172.16.1.0/24 -d 172.16.3.0/24 -i eth1 -o eth3 -m limit --limit 100/min --limit-burst 20 -j LOG --log-prefix "LOG BAN of all other inbound"
-A FORWARD -s 172.16.1.0/24 -d 172.16.3.0/24 -i eth1 -o eth3 -j DROP
-A FORWARD -s 172.16.1.0/24 -d 172.16.2.0/24 -i eth1 -o eth2 -p tcp -m tcp --dport 8080 -j ACCEPT
-A FORWARD -s 172.16.1.0/24 -d 172.16.2.0/24 -i eth1 -o eth2 -j LOG --log-prefix "LOG BAN from DMZ to App-Tier "
-A FORWARD -s 172.16.1.0/24 -d 172.16.2.0/24 -i eth1 -o eth2 -j DROP
-A FORWARD -s 172.16.2.0/24 -d 172.16.1.0/24 -i eth2 -o eth1 -m limit --limit 5/min --limit-burst 7 -j LOG --log-prefix "BAN App-Tier to DMZ"
-A FORWARD -s 172.16.2.0/24 -d 172.16.1.0/24 -i eth2 -o eth1 -j DROP
-A FORWARD -s 172.16.2.0/24 -d 172.16.3.10/32 -i eth2 -o eth3 -p tcp -m tcp --dport 9443 -m limit --limit 100/min --limit-burst 20 -j ACCEPT
-A FORWARD -s 172.16.3.10/32 -d 172.16.3.20/32 -i eth3 -o eth3 -p tcp -m tcp --dport 5432 -m limit --limit 100/min --limit-burst 20 -j ACCEPT
-A FORWARD -s 172.16.2.0/24 -d 172.16.3.30/32 -i eth2 -o eth3 -p tcp -m tcp --dport 8443 -m limit --limit 100/min --limit-burst 20 -j ACCEPT
-A FORWARD -s 203.0.113.50/32 -d 172.16.3.0/24 -o eth3 -p tcp -m tcp --dport 22 -m limit --limit 100/min --limit-burst 20 -j ACCEPT
-A FORWARD -d 172.16.3.0/24 -o eth3 -m limit --limit 100/min --limit-burst 20 -j LOG --log-prefix "LOG BAN other connxs to CDE"
-A FORWARD -d 172.16.3.0/24 -o eth3 -j DROP
-A FORWARD -s 172.16.3.0/24 -i eth3 -o eth0 -j DROP
COMMIT
# Completed on Wed Dec 31 17:31:42 2025
