netsec/firewall/iptables_lab_4.txt
# Generated by iptables-save v1.8.9 (nf_tables) on Thu Jan  1 10:19:31 2026
*filter
:INPUT ACCEPT [906730:1162285092]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [124647:18573395]
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -m conntrack --ctstate INVALID -j LOG --log-prefix "LOG BAN on INVALID"
-A FORWARD -m conntrack --ctstate INVALID -j DROP
-A FORWARD ! -s 192.168.10.0/24 -i eth1 -j LOG --log-prefix "BAN Spoof Corporate LAN"
-A FORWARD ! -s 192.168.10.0/24 -i eth1 -j DROP
-A FORWARD ! -s 192.168.20.0/24 -i eth2 -j LOG --log-prefix "BAN Server Farm"
-A FORWARD ! -s 192.168.20.0/24 -i eth2 -j DROP
-A FORWARD -d 192.168.20.10/32 -i eth0 -o eth2 -p tcp -m tcp --dport 80 -j ACCEPT
-A FORWARD -d 192.168.20.10/32 -i eth0 -o eth2 -p tcp -m tcp --dport 443 -j ACCEPT
-A FORWARD -d 192.168.20.20/32 -i eth0 -o eth2 -p tcp -m tcp --dport 25 -j ACCEPT
-A FORWARD -d 192.168.20.0/24 -i eth0 -o eth2 -m limit --limit 5/min --limit-burst 10 -j LOG --log-prefix "LOG BAN Internet to Server"
-A FORWARD -d 192.168.20.0/24 -i eth0 -o eth2 -j DROP
-A FORWARD -s 192.168.20.0/24 -i eth2 -o eth0 -p tcp -m tcp --dport 443 -j ACCEPT
-A FORWARD -s 192.168.20.40/32 -i eth2 -o eth0 -p tcp -m tcp --dport 53 -j ACCEPT
-A FORWARD -s 192.168.20.40/32 -i eth2 -o eth0 -p udp -m udp --dport 53 -j ACCEPT
-A FORWARD -s 192.168.20.0/24 -i eth2 -o eth0 -m limit --limit 5/min --limit-burst 7 -j LOG --log-prefix "BAN Server to Internet"
-A FORWARD -s 192.168.20.0/24 -i eth2 -o eth0 -j DROP
-A FORWARD -s 192.168.10.0/24 -d 192.168.20.10/32 -i eth1 -o eth2 -p tcp -m tcp --dport 443 -j ACCEPT
-A FORWARD -s 192.168.10.0/24 -d 192.168.20.20/32 -i eth1 -o eth2 -p tcp -m tcp --dport 993 -j ACCEPT
-A FORWARD -s 192.168.10.5/32 -d 192.168.20.0/24 -i eth1 -o eth2 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -s 192.168.20.10/32 -d 192.168.20.30/32 -i eth2 -o eth2 -p tcp -m tcp --dport 3306 -j ACCEPT
-A FORWARD -s 192.168.10.0/24 -d 192.168.20.0/24 -i eth1 -o eth2 -m limit --limit 5/min --limit-burst 7 -j LOG --log-prefix "BAN Others Corporate to Serve"
-A FORWARD -s 192.168.10.0/24 -d 192.168.20.0/24 -i eth1 -o eth2 -j DROP
-A FORWARD -s 192.168.20.0/24 -d 192.168.10.0/24 -i eth2 -o eth1 -m limit --limit 5/min --limit-burst 7 -j LOG --log-prefix "BAN Server to Corporate"
-A FORWARD -s 192.168.20.0/24 -d 192.168.10.0/24 -i eth2 -o eth1 -j DROP
-A FORWARD -s 192.168.10.0/24 -i eth1 -o eth0 -p tcp -m tcp --dport 80 -j ACCEPT
-A FORWARD -s 192.168.10.0/24 -i eth1 -o eth0 -p tcp -m tcp --dport 443 -j ACCEPT
-A FORWARD -s 192.168.10.0/24 -i eth1 -o eth0 -p tcp -m tcp --dport 53 -j ACCEPT
-A FORWARD -s 192.168.10.0/24 -i eth1 -o eth0 -p udp -m udp --dport 53 -j ACCEPT
-A FORWARD -s 192.168.10.0/24 -i eth1 -o eth0 -m limit --limit 5/min --limit-burst 7 -j LOG --log-prefix "BAN Other Corporate to Intern"
-A FORWARD -s 192.168.10.0/24 -i eth1 -o eth0 -j DROP
-A FORWARD -d 192.168.10.0/24 -i eth0 -o eth1 -m limit --limit 5/min --limit-burst 10 -j LOG --log-prefix "Internet to Corp"
-A FORWARD -d 192.168.10.0/24 -i eth0 -o eth1 -j DROP
COMMIT
# Completed on Thu Jan  1 10:19:31 2026
